# Text2Cinema

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Engine.cpp  Engine.h
src/export/: FrameRecorder.cpp  FrameRecorder.h  VideoExporter.cpp  VideoExporter.h
src/parser/: TextParser.cpp  TextParser.h
src/rendering/: Camera.cpp  Camera.h  Lighting.cpp  Lighting.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/simulation/: Environment.cpp  Environment.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsEngine.cpp  PhysicsEngine.h
src/utils/: Config.h  Helpers.cpp  Helpers.h
